[package]
name = "jump-quest"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
bincode = "1.3"
directories = "5"
base64 = "0.21"
unicode-normalization = "0.1"

[dev-dependencies]
tempfile = "3"
serial_test = "2"
